// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <ListSection
    isCollapsed={false}
    isCollapsible={false}
    level={1}
    title="test"
  >
    <ListSectionHeader
      isCollapsed={false}
      isCollapsible={false}
      level={1}
      title="test"
    >
      <li
        className="orion-fusion-theme"
      >
        <h1
          className="title"
        >
          <div
            className="section-header"
          >
            <div
              className="fill"
            >
              test
            </div>
          </div>
        </h1>
      </li>
    </ListSectionHeader>
    <li>
      <ul
        className="list orion-fusion-theme"
        level={1}
        title="test"
      />
    </li>
  </ListSection>
</ThemeContextProvider>
`;

exports[`should render with callback functions 1`] = `
<Fragment>
  <ListSectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={1}
    onSelect={[MockFunction]}
    refCallback={[MockFunction]}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={1}
      onSelect={[MockFunction]}
      refCallback={[MockFunction]}
      title="test"
    />
  </li>
</Fragment>
`;

exports[`should render with isCollapsed 1`] = `
<Fragment>
  <ListSectionHeader
    isCollapsed={true}
    isCollapsible={false}
    level={1}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={1}
      title="test"
    />
  </li>
</Fragment>
`;

exports[`should render with isCollapsible 1`] = `
<Fragment>
  <ListSectionHeader
    isCollapsed={false}
    isCollapsible={true}
    level={1}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={1}
      title="test"
    />
  </li>
</Fragment>
`;

exports[`should render with items 1`] = `
<Fragment>
  <ListSectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={1}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={1}
      title="test"
    >
      <ListItem
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key="123"
      />
      <ListItem
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key="124"
      />
      <ListItem
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key="125"
      />
      <ListItem
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key="126"
      />
      <ListItem
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key="127"
      />
    </ul>
  </li>
</Fragment>
`;

exports[`should render with level 1`] = `
<Fragment>
  <ListSectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={3}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={3}
      title="test"
    />
  </li>
</Fragment>
`;

exports[`should render with no items 1`] = `
<Fragment>
  <ListSectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={1}
    title="test"
  />
  <li>
    <ul
      className="list"
      level={1}
      title="test"
    />
  </li>
</Fragment>
`;
